Converting api url to html link.

--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,14 @@
       <div class="container glass mb-2">
         <h3 class="pb">
           endpoint:
-          <span class="endpoint">/api/climate-stories/:page</span>
+          <a
+            href="https://climate-data.vercel.app/api/climate-stories/1"
+            class="endpoint"
+            target="_blank"
+            rel="noreferrer"
+          >
+            /api/climate-stories/:page
+        </a>
         </h3>
         <p class="text">Where the dynamic page value is the user request param</p>
         <p class="text pb-1">Returns a list of climate stories with the story object shape of:</p>
@@ -155,7 +162,14 @@
       <div class="container glass">
         <h3 class="pb">
           endpoint:
-          <span class="endpoint">/api/vital-signs</span>
+          <a
+            href="https://climate-data.vercel.app/api/vital-signs"
+            class="endpoint"
+            target="_blank"
+            rel="noreferrer"
+            >
+            /api/vital-signs
+          </a>
         </h3>
         <p class="text pb-1">Returns a list of climate vital signs with the vital sign object shape of:</p>
         <pre><code>
