Adding a back to top botton in html and styles.

--- a/public/index.html
+++ b/public/index.html
@@ -198,6 +198,14 @@
       </div>
       <div id="sample-stories"></div>
     </section>
+    <a
+      id="back-to-top"
+      href="#content"
+      rel="noopener"
+      target="_self"
+    >
+      &#8593;
+    </a>
   </main>
 </body>
 </html>
