--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <main id="content">
     <section class="landing">
       <header>
+        <nav>
           <a href="#sample">
             <div class="ring"></div>
             <div class="api">
@@ -119,8 +120,17 @@
               </g>
             </svg>
           </a>
+        </nav>
+      </header>
+      <header class="title">
+        <h1>Climate Change API</h1>
+        <h2>
+          Unofficial API collection of scraped climate stories and climate vital signs from NASA
+        </h2>
+      </header>
     </section>
     <section id="api">
+      <h2 class="section-title">API Documentation</h2>
       <div class="container glass mb-2">
         <h3 class="pb">
           endpoint:
