--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/dexie@3.2.5/dist/dexie.min.js"></script>
   <script src="./db.js" type="module"></script>
   <script src="./main.js" defer></script>
-  <script src="./sample-vitals.js" defer></script>
+  <script src="./sample-vitals.js" defer type="module"></script>
 </head>
 <body>
   <div class="overlay"></div>
@@ -217,7 +217,7 @@
       rel="noopener"
       target="_self"
     >
-      &#8593;
+      ⬆
     </a>
   </main>
 </body>
