--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/dexie@3.2.5/dist/dexie.min.js"></script>
   <script src="./db.js" type="module"></script>
   <script src="./main.js" defer></script>
+  <script src="./sample-stories.js" defer type="module"></script>
   <script src="./sample-vitals.js" defer type="module"></script>
 </head>
 <body>
@@ -122,6 +123,57 @@
                 <path d="M65.748 44.848c-1.468.978-3.017 1.999-4.649 3.065.732.355 1.315.801 1.371 1.377.104 1.082-2.07 1.605-4.035 1.38-.393-.045-.779-.148-1.147-.286-.408.263-.82.528-1.238.796-.425.273-.941.609-1.53.997v1.553c.39-.765 1.243-1.45 1.905-1.485.285-.015 1.275.9 5.355.675 1.98-.109 5.805-2.22 5.745-4.65C67.489 46.834 66.739 45.714 65.748 44.848zM54.519 48.6v1.582c.361-.241.717-.478 1.066-.709C55.036 49.091 54.647 48.734 54.519 48.6zM64.353 43.855c-.38-.225-.765-.422-1.134-.596-1.92-.9-3.93-1.065-4.35-2.28-.296-.857.54-1.65 2.58-1.62 2.04.03 3.93 1.245 4.44 1.68v-3.87c-.15.15-.808.905-1.41.78-1.155-.24-3.12-.553-5.37-.54-2.58.015-4.8 2.009-4.875 4.53-.105 3.525 2.715 4.485 4.305 5.04.164.057.351.118.554.183 1.525-.992 2.731-1.756 3.437-2.163C63.004 44.726 63.625 44.334 64.353 43.855z"/>
               </g>
             </svg>
+          </a>
+          <a href="#api">
+            <div class="api">
+              <svg xmlns="http://www.w3.org/2000/svg" height="90" viewBox="0 0 100 90" width="100">
+                <circle cx="50.049" cy="45" fill="#0b3d91" r="40.1"/>
+                <g fill="#fff">
+                  <circle cx="52.299" cy="13.17" r=".45"/>
+                  <circle cx="35.169" cy="23.962" r=".337"/>
+                  <circle cx="25.119" cy="63.33" r=".45"/>
+                  <circle cx="26.289" cy="66.93" r=".45"/>
+                  <circle cx="43.352" cy="16.56" r=".337"/>
+                  <circle cx="20.709" cy="63.87" r=".337"/>
+                  <circle cx="39.009" cy="70.942" r=".338"/>
+                  <circle cx="58.359" cy="21.33" r=".45"/>
+                  <circle cx="47.679" cy="12.57" r=".45"/>
+                  <circle cx="50.131" cy="8.16" r=".337"/>
+                  <circle cx="52.352" cy="17.88" r=".337"/>
+                  <circle cx="67.711" cy="64.98" r=".337"/>
+                  <circle cx="48.849" cy="15.982" r=".337"/>
+                  <circle cx="76.052" cy="55.92" r=".338"/>
+                  <circle cx="67.771" cy="60.42" r=".337"/>
+                  <circle cx="24.549" cy="65.61" r=".338"/>
+                  <circle cx="44.349" cy="17.22" r=".337"/>
+                  <circle cx="42.452" cy="15.9" r=".337"/>
+                  <circle cx="34.449" cy="70.103" r=".338"/>
+                  <circle cx="36.609" cy="25.703" r=".337"/>
+                  <circle cx="31.531" cy="65.34" r=".338"/>
+                  <circle cx="79.809" cy="66.48" r=".337"/>
+                  <circle cx="48.009" cy="69.96" r=".338"/>
+                  <circle cx="76.749" cy="64.522" r=".337"/>
+                  <circle cx="55.929" cy="67.103" r=".337"/>
+                  <circle cx="80.312" cy="61.14" r=".337"/>
+                  <circle cx="38.499" cy="67.02" r=".45"/>
+                  <circle cx="70.839" cy="61.08" r=".45"/>
+                  <circle cx="82.479" cy="60.42" r=".45"/>
+                  <circle cx="70.839" cy="58.2" r=".45"/>
+                  <circle cx="69.309" cy="73.883" r=".337"/>
+                  <circle cx="42.849" cy="18.563" r=".337"/>
+                  <circle cx="35.671" cy="53.58" r=".337"/>
+                  <circle cx="76.719" cy="57.96" r=".45"/>
+                  <circle cx="35.799" cy="61.32" r=".45"/>
+                  <path d="M58.71 12.288l1.119-.107-1.117-.063c-.035-.216-.208-.385-.426-.413l-.107-1.114-.064 1.123c-.202.045-.357.214-.382.424l-1.144.104 1.152.062c.042.193.198.344.394.38l.104 1.148.061-1.146C58.507 12.651 58.671 12.492 58.71 12.288z"/>
+                  <path d="M39.824 24.746l1.119-.107-1.117-.063c-.034-.216-.208-.385-.426-.413l-.107-1.114-.063 1.123c-.203.045-.358.214-.383.424l-1.144.104 1.152.062c.042.193.198.344.394.38l.104 1.148.062-1.146C39.622 25.11 39.786 24.95 39.824 24.746z"/>
+                  <path d="M81.659 57.684l1.119-.107-1.117-.063c-.034-.216-.208-.385-.426-.413l-.107-1.114-.063 1.123c-.202.045-.357.214-.382.424l-1.144.104 1.152.062c.042.193.198.344.394.38l.104 1.148.062-1.146C81.456 58.048 81.62 57.889 81.659 57.684z"/>
+                  <path d="M36.044 74.906l1.119-.107-1.117-.063c-.035-.216-.208-.385-.426-.413l-.107-1.113-.063 1.122c-.203.045-.358.214-.383.424l-1.144.104 1.152.062c.042.193.198.345.394.38l.104 1.148.062-1.146C35.841 75.27 36.006 75.11 36.044 74.906z"/>
+                  <path d="M78.104 66.506l1.119-.107-1.117-.063c-.034-.216-.208-.385-.426-.413l-.107-1.114-.063 1.122c-.202.045-.357.214-.382.424l-1.144.104 1.152.062c.042.193.198.344.394.38l.104 1.148.062-1.146C77.901 66.87 78.066 66.71 78.104 66.506z"/>
+                </g>
+              </svg>
+              <p>{ API }</p>
+              <h6>docs</h6>
+            </div>
           </a>
         </nav>
       </header>
