Replaced emoji arrows with font awesome arrows.

--- a/public/index.html
+++ b/public/index.html
@@ -269,7 +269,7 @@
       rel="noopener"
       target="_self"
     >
-      ⬆
+      <i class="fa fa-arrow-up button"></i>
     </a>
   </main>
 </body>
